--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
         <nav class="nav-wrapper">
             <div class="container-wide">
                 <div class="row space-between align-items">
-                    <div class="logo">MNTN</div>
-
-                    
+                    <div class="logo">MNTN</div>             
                     <div class="nav">
                         <ul>
                             <li>
@@ -35,8 +33,6 @@
                         </ul>
                     </div>
                     <a href="#" class="account">Account</a>
-
-
                     <button class="nav-button">
                         <span class="nav-button-icon"></span>
                     </button>
@@ -59,7 +55,7 @@
                 </div>
             </div>
         </nav>    
-            <a href="#" class="hero">
+            <a href="#article" class="hero">
                 <h1 class="hero-category">A Hiking guide</h1>
                 <div class="hero-title">Be prepared for the Mountains and beyond!</div>
                 <p class="hero-scroll">scroll down</p>
@@ -68,7 +64,7 @@
 
     <main class="main">
         <div class="container">
-            <article class="article">
+            <article class="article" id="article">
                 <div class="article-text" data-number="01">
                     <h3 class="article-subtitle">Get started</h3>
                     <h2 class="article-title">What level of hiker are you?</h2>
